--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Wallclock</title>
 </head>
 <body>
-    <svg>
-        <circle>
-        <polyline>
+    <svg width="512" height="512" viewbox="0 0 512 512">
+        <circle style="stroke: none; fill: black;"
+        cx="200" cy="200" r="100""/>
+        <polyline style="stroke: white; stroke-width: 20; fill: none; stroke-linecap: round; stroke-linejoin: round;" 
+        points="150 200, 200 200, 200 150"/>
     </svg>
 </body>
 </html>
